# aquaflux

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: boundary.md  discretization.md  flow.md  io.md  mesh.md  parallel.md  properties.md  schemes.md  solve.md  turbulence.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
aquaflux/: __init__.py  vectors.py
aquaflux/boundary/: __init__.py  collection.py  conditions.py  patch.py
aquaflux/discretization/: __init__.py  advection.py  diffusion.py  face_flux.py  fixed_value.py  residual.py  source.py  transient.py
aquaflux/flow/: __init__.py  block_preconditioner.py  boundary.py  continuation.py  initialization.py  mean_velocity.py  momentum.py  preconditioner.py  rhie_chow.py  scales.py  state.py
aquaflux/io/: __init__.py  reader.py
aquaflux/io/openfoam/: __init__.py  assembler.py  foamfile.py  grammar.py  reader.py  records.py
aquaflux/materials/: __init__.py  model.py  property.py
aquaflux/mesh/: __init__.py  cell.py  collapse.py  connectivity.py  distance.py  face.py  geometry.py  graph.py  groups.py  mesh.py  quality.py  reorder.py  structured.py
aquaflux/parallel/: __init__.py  distributed.py  halo.py  padding.py  partition.py  partitioner.py
aquaflux/properties/: __init__.py  model.py  property.py
aquaflux/schemes/: __init__.py  gradient.py  interpolation.py  limiter.py
aquaflux/solve/: __init__.py  continuation.py  frozen_operator.py  implicit.py  linear.py  march.py  multigrid.py  newton.py  norm.py  relaxation.py  step_control.py
aquaflux/turbulence/: __init__.py  boundary.py  continuation.py  coupled.py  driver.py  initialization.py  preconditioner.py  sources.py  sst.py  strain.py  transport.py
tests/: conftest.py
tests/fixtures/polymesh_2d_slab/: boundary
tests/fixtures/polymesh_2d_slab_frontandback/: boundary  faces  owner  points
tests/fixtures/polymesh_3d_two_cubes/: boundary  cellZones  faces  neighbour  owner
tests/integration/: test_advection_diffusion.py  test_betchen_solve.py  test_cavity.py  test_channel.py  test_channel_high_reynolds.py  test_channel_law_of_the_wall.py  test_coupled_mass_flow.py  test_coupled_periodic_channel.py  test_coupled_rans.py  test_flow_adjoint.py  test_flow_preconditioner.py  test_limited_advection.py  test_periodic_channel.py  test_plane_wall.py  test_poiseuille.py  test_skewed_diffusion.py  test_skewed_flow.py  test_swept_gradient_flow.py  test_turbulent_cavity.py  test_turbulent_channel.py
tests/support/: __init__.py  fields.py  meshes.py  polymesh.py
tests/unit/: test_advection.py  test_boundary.py  test_boundary_collection.py  test_collapse.py  test_connectivity.py  test_coupled_rans.py  test_diffusion.py  test_distance.py  test_distributed.py  test_distributed_gradient.py  test_distributed_swept_gradient.py  test_fixed_value.py  test_flow_boundary.py  test_flow_scales.py  test_flow_state.py  test_foamfile.py  test_forward_march.py  test_gradient.py  test_halo_all_to_all.py  test_implicit_solve.py  test_initialization.py  test_interpolation.py  test_limiter.py  test_materials.py  test_mean_velocity.py  test_mesh.py  test_momentum_coupling.py  test_multigrid.py  test_newton.py  test_openfoam_assemble.py  test_openfoam_reader.py  test_padding.py  test_partition.py  test_partitioner.py  test_preconditioner.py  test_preconditioning.py  test_properties.py  test_pseudo_transient.py  test_relaxation.py  test_reorder.py  (+20 more)
tools/: canadian-spelling.dict
validation/pitzdaily_openfoam/: .gitignore  README.md  compare.py
validation/pitzdaily_openfoam/of_case/: log.blockMesh  log.cc  log.foamRun  run_of.sh
validation/pitzdaily_openfoam/of_case/100/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1000/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1100/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1200/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1300/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1400/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1500/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1600/: U  k  nut  omega  p  phi
validation/pitzdaily_openfoam/of_case/1700/: U  k  p  (+3 more)
validation/pitzdaily_openfoam/runs/: summary.txt
validation/skewed_cavity/: .gitignore  README.md  compare.py  report.md  report_sweep.md  run_of.sh  run_of_beta.sh  sweep.py
validation/turbulent_channel/: .gitignore  README.md  compare.py  report.md
validation/turbulent_channel_openfoam/: README.md  compare.py  report.md
validation/turbulent_channel_openfoam/of_case/: run_of.sh
(+92 files in other folders)
